--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/postgres": "^0.10.0",
     "date-fns": "^4.1.0",
     "next": "15.5.4",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.11"
