--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "seed": "tsx prisma/seed.ts"
   },
@@ -13,7 +13,6 @@
     "@vercel/postgres": "^0.10.0",
     "date-fns": "^4.1.0",
     "next": "15.5.4",
-    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.11"
@@ -23,10 +22,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.4.7",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.6",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
